Fix menu z-index

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -243,14 +243,14 @@ body {
   position: fixed;
   right: 20px;
   top: 3px;
-  z-index: 20;
+  z-index: 120;
 }
 
 #app-frame .menu-assembly .page-menu {
   background-image: linear-gradient(hsla(44.505493, 89.21568%, 85%, 0.5), hsla(44.505493, 89.21568%, 40%, 0.5)), url(../img/brushed_metal.png), linear-gradient(hsla(44.505493, 89.21568%, 25%, 0.7), hsla(44.505493, 89.21568%, 30%, 0.7), hsla(44.505493, 89.21568%, 35%, 0.7), hsla(44.505493, 89.21568%, 40%, 0.7), hsla(44.505493, 89.21568%, 45%, 0.7), hsla(44.505493, 89.21568%, 65%, 0.7), hsla(44.505493, 89.21568%, 90%, 0.7));
   position: fixed;
   box-shadow: inset 0 0 5px grey;
-  z-index: 9;
+  z-index: 109;
   transition: top .5s, opacity .5s;
   width: calc(100%  -  40px);
   padding: 5px;
